# GETBase

./: CMakeLists.txt  Graph.cpp  Graph.h  GraphTest.cpp  Make_One.py  Processing.py  Processing_Farhana.py  Processing_FarhanaV2.py  Processing_Kevin.py  SDA.cpp  SDA.h  SDATest.cpp  bitspray.cpp  bitspray.h  job_array.sh  main.cpp  main.h  run_many.sh  setu.cpp  setu.h  stat.cpp  stat.h
